第一次提交

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,32 @@
 project ("my-redis")
 
 # 将源代码添加到此项目的可执行文件。
-add_executable (my-redis   "14_server.cpp" "avl.cpp" "avl.h" "common.h" "hashtable.cpp" "hashtable.h" "heap.cpp" "heap.h" "list.h" "thread_pool.cpp" "thread_pool.h" "zset.cpp" "zset.h")
+add_executable (server 
+				"server.cpp"
+				"avl.cpp" 
+				"avl.h"
+				"common.h"
+				"hashtable.cpp"
+				"hashtable.h" 
+				"heap.cpp"
+				"heap.h"
+				"list.h" 
+				"thread_pool.cpp"
+				"thread_pool.h"
+				"zset.cpp"
+				"zset.h")
+
+add_executable(client 
+				"client.cpp"
+				"avl.cpp" 
+				"avl.h"
+				"common.h"
+				"hashtable.cpp"
+				"hashtable.h" 
+				"heap.cpp"
+				"heap.h"
+				"list.h" 
+				"thread_pool.cpp"
+				"thread_pool.h"
+				"zset.cpp"
+				"zset.h")
